[package]
name = "torrent-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10"
hex-literal = "0.3"
generic-array = "0.14"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
data-encoding = "2"
urlencoding = "2"
lava_torrent = "0.9"
thiserror = "1.0"
parking_lot = "0.12"
